Pagina Livros eletrônicos atualizada

--- a/pages/livros-eletronicos.html
+++ b/pages/livros-eletronicos.html
@@ -21,9 +21,9 @@
             <div class="fixar">
                 <h2>Livros Eletrônicos</h2>
                 <!-- Alterar este texto -->
-                <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate cum praesentium harum nesciunt quas, atque accusamus ad quae ducimus sint corrupti tempore enim. Explicabo nam, atque eum reiciendis quas asperiores.</p>
+                <p class="revisar">Nessa seção você encontra os livros eletrônicos desenvolvidos</p>
                 <span class="apenas-desktop">
-                    <p class="revisar">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum cumque hic repellendus unde culpa optio numquam molestias, temporibus adipisci fugiat reprehenderit! Ipsam, nulla molestias mollitia accusantium asperiores quod aliquam quo.</p>
+                    <p class="revisar">Os livros eletrônicos desempenham um papel crucial na era digital, oferecendo uma acessibilidade sem precedentes ao conhecimento e à literatura. Sua importância reside na capacidade de proporcionar fácil distribuição, armazenamento compacto e personalização da experiência de leitura. Além de reduzir o impacto ambiental associado à produção de papel, os e-books permitem que leitores acessem uma vasta biblioteca com apenas alguns cliques, promovendo a disseminação eficiente e econômica do saber em todo o mundo. Essa transformação digital não apenas amplia o acesso à informação, mas também impulsiona a inovação na forma como as histórias são contadas e o conhecimento é compartilhado.</p>
                 </span>
             </div>
             
@@ -48,7 +48,8 @@
                             <h5>Orientadores: Begoña Alarcón, Carlos Meniño e Cristhabel Vasquez.</h5>
                             <h6>Ano: 2020</h6>
 <!-- Descrição do livro -->
-                            <p class="revisar">Breve descrição sobre o livro</p>
+                            <p>Primeiramente, incluiremos recursos básicos de geometria analítica para dar um reforço na parte de gráfico de funções escalares. A seguir serão trabalhados conceitos chave sobre cálculo diferencial de funções de várias variáveis escalares e vetoriais. 
+                                Os textos presentes nos capítulos deste livro relacionados com o cálculo diferencial foram extraídos na sua maioria da Notas de Aula de Cálculo 2B da professora Denise de Oliveira Pinto (Departamento de Matemática Aplicada - UFF)</p>
                         </div>
                     </div>
                 </div>
@@ -67,7 +68,7 @@
                                 <h5>Monitores: Paula Bruna Daco, Raphael Odalvo, João Pedro Teixeira, Júlia Anjos</h5>
                                 <h5>Orientadores: Begoña Alarcón, Carlos Meniño e Cristhabel Vasquez.</h5>
                                 <h6>Ano: 2020</h6>
-                                <p class="revisar">Breve descrição sobre o livro</p>
+                                <p >O conteúdo do livro será apresentado da seguinte maneira: Primeiramente, incluiremos recursos básicos de transformações para dar um reforço em mudanças de variável. A seguir serão trabalhados conceitos chave sobre integrais duplas e triplas de funções escalares. /p>
                             </div>
                         </div>
                     </div>
@@ -87,7 +88,7 @@
                                 <h5>Monitores: Ruan Soares Risso Possas, João Victor da Silvares, Gabriel Felice de Freitas Santos, Raphael Odalvo, João Pedro Teixeira, Maria Luiza Américo, Alan da Silva Gomes </h5>
                                 <h5>Orientadores: Begoña Alarcón, Jones Colombo, Leandro Merlo, Leonardo Silvares e Pablo Barrientos.</h5>
                                 <h6>Ano: 2021</h6>
-                                <p class="revisar">Breve descrição sobre o livro</p>
+                                <p> livro tem o  intuito de ser um primeiro contato com o conteúdo básico Geometria Analítica de forma objetiva e dinâmica. Por este motivo, o conteúdo aqui abordado deve ser complementado  com o estudo do material indicado pelo professor.</p>
 
                         
                             </div>
@@ -102,13 +103,14 @@
                     <div class="recurso-content">
                         <h3>Apostila Cálculo Diferencial de Várias Variáveis</h3>
                         <div class="recurso-box">
-                            <a href="">
-                                <img src="../assets/img/img-padrao.bmp" alt="Apostila Cálculo Diferencial de Várias Variáveis">
+                            <a href="https://redmatuff.github.io/calculovariasvariaveis/">
+                                <img src="../assets/img/imagem-capa-c2b.png" alt="Apostila Cálculo Diferencial de Várias Variáveis">
                             </a>
                             <div class="recurso-descricao">
-                            <h5>Monitores:</h5>
-                            <h6>Ano: ----</h6>
-                            <p class="revisar">Breve descrição sobre o livro</p>
+                            <h5>Monitores: João Pedro Teixeira De Sá, Raphael Brandão, Júlia Canário dos Anjos, Paula Bruna Daco, Guilherme Cardoso Garcia de Carvalho</h5>
+                            <h5>Orientadores: Begoña Alarcón, Carlos Meniño, Cristhabel Vasquez</h5>
+                            <h6>Ano: 2020</h6>
+                            <p>O material disponibilizado nesta plataforma  visa introduzir o aluno ao cálculo diferencial de funções de várias variáveis reais. Também pretendemos dotar os professores de recursos educacionais digitais que tornem suas aulas mais interativas e atraentes para o discente.</p>
                         </div>
                     </div>
                 </div>
