--- a/pages/livros-eletronicos.html
+++ b/pages/livros-eletronicos.html
@@ -68,7 +68,7 @@
                                 <h5>Monitores: Paula Bruna Daco, Raphael Odalvo, João Pedro Teixeira, Júlia Anjos</h5>
                                 <h5>Orientadores: Begoña Alarcón, Carlos Meniño e Cristhabel Vasquez.</h5>
                                 <h6>Ano: 2020</h6>
-                                <p >O conteúdo do livro será apresentado da seguinte maneira: Primeiramente, incluiremos recursos básicos de transformações para dar um reforço em mudanças de variável. A seguir serão trabalhados conceitos chave sobre integrais duplas e triplas de funções escalares. /p>
+                                <p >O conteúdo do livro será apresentado da seguinte maneira: Primeiramente, incluiremos recursos básicos de transformações para dar um reforço em mudanças de variável. A seguir serão trabalhados conceitos chave sobre integrais duplas e triplas de funções escalares. </p>
                             </div>
                         </div>
                     </div>
