sticky apenas no ultimo elemento de classe fixar

--- a/pages/livros-eletronicos.html
+++ b/pages/livros-eletronicos.html
@@ -47,9 +47,8 @@
                             <h5>Monitores: Paula Bruna Daco, Raphael Odalvo, João Pedro Teixeira, Júlia Anjos</h5>
                             <h5>Orientadores: Begoña Alarcón, Carlos Meniño e Cristhabel Vasquez.</h5>
                             <h6>Ano: 2020</h6>
-<!-- Descrição do livro -->
                             <p>Primeiramente, incluiremos recursos básicos de geometria analítica para dar um reforço na parte de gráfico de funções escalares. A seguir serão trabalhados conceitos chave sobre cálculo diferencial de funções de várias variáveis escalares e vetoriais. 
-                                Os textos presentes nos capítulos deste livro relacionados com o cálculo diferencial foram extraídos na sua maioria da Notas de Aula de Cálculo 2B da professora Denise de Oliveira Pinto (Departamento de Matemática Aplicada - UFF)</p>
+                            Os textos presentes nos capítulos deste livro relacionados com o cálculo diferencial foram extraídos na sua maioria da Notas de Aula de Cálculo 2B da professora Denise de Oliveira Pinto (Departamento de Matemática Aplicada - UFF)</p>
                         </div>
                     </div>
                 </div>
@@ -88,7 +87,7 @@
                                 <h5>Monitores: Ruan Soares Risso Possas, João Victor da Silvares, Gabriel Felice de Freitas Santos, Raphael Odalvo, João Pedro Teixeira, Maria Luiza Américo, Alan da Silva Gomes </h5>
                                 <h5>Orientadores: Begoña Alarcón, Jones Colombo, Leandro Merlo, Leonardo Silvares e Pablo Barrientos.</h5>
                                 <h6>Ano: 2021</h6>
-                                <p> livro tem o  intuito de ser um primeiro contato com o conteúdo básico Geometria Analítica de forma objetiva e dinâmica. Por este motivo, o conteúdo aqui abordado deve ser complementado  com o estudo do material indicado pelo professor.</p>
+                                <p>O livro tem o  intuito de ser um primeiro contato com o conteúdo básico Geometria Analítica de forma objetiva e dinâmica. Por este motivo, o conteúdo aqui abordado deve ser complementado  com o estudo do material indicado pelo professor.</p>
 
                         
                             </div>
