--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -120,10 +120,10 @@
 
                         <div class="recurso-box">
 <!-- Lembrar de colocar um link -->
-                            <a href="#" target="_blank">
+                            <!-- <a href="#" target="_blank"> -->
                                 <img src="../assets/img/img-tvm.png" alt="Video do instagram">
                                 <img src="../assets/icons/instagram.png" alt="logo do insta" class="logo">
-                            </a>
+                            <!-- </a> -->
                             <div class="recurso-descricao">
                                 <h5>Monitor: Gabriel Domingues</h5>
                                 <h5> Orientador: Begoña Alarcón</h5>
@@ -157,7 +157,7 @@
                     <div class="recurso-content">
 
                         <div class="recurso-box">
-                            <a href="https://www.geogebra.org/m/fgaqwqtv">
+                            <a href="https://www.geogebra.org/m/fgaqwqtv" target="_blank">
                                 <img src="../assets/img/gradiente-livro-atv.jpg" alt="Livro de atividades sobre vetor gradiente e curva de nível">
                                 <img src="../assets/icons/geogebra-icon-peq.png" alt="icone geogebra" class="logo">
                             </a>
@@ -194,7 +194,7 @@
                     <div class="recurso-content">
 
                         <div class="recurso-box">
-                            <a href="https://www.geogebra.org/m/wj9n8x2f">
+                            <a href="https://www.geogebra.org/m/wj9n8x2f" target="_blank">
                                 <img src="../assets/img/edo-livro-atv.jpg" alt="Livro de atividades de modelagem matemática usando equações diferenciais ordinárias">
                                 <img src="../assets/icons/geogebra-icon-peq.png" alt="icone geogebra" class="logo">
                             </a>
