adição dos links da conta do redmat nos livros de atividades do geogebra sobre EDO e Vetor Gradiente.

--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -157,7 +157,7 @@
                     <div class="recurso-content">
 
                         <div class="recurso-box">
-                            <a href="https://www.geogebra.org/m/fgaqwqtv" target="_blank">
+                            <a href="https://www.geogebra.org/m/prsfkths" target="_blank">
                                 <img src="../assets/img/gradiente-livro-atv.jpg" alt="Livro de atividades sobre vetor gradiente e curva de nível">
                                 <img src="../assets/icons/geogebra-icon-peq.png" alt="icone geogebra" class="logo">
                             </a>
@@ -166,7 +166,7 @@
                                 <h5>Orientador: Pablo Barrientos</h5>
                                 <h6>Ano: 2023</h6>
                                 <p >
-                                    O livro de atividades apresenta abordagem visual com gráficos 3D de conceitos do vetor gradiente e algumas relações com a correspondente curvas de nível.
+                                    O livro de atividades apresenta abordagem visual com gráficos 3D de conceitos do vetor gradiente e algumas relações com a correspondente curva de nível.
                                 </p>
 <!-- <p class="comentario">O texto abaixo fica na descrição do livro dentro do site geogebra. Fazer um resumo para substituí-lo</p><br> -->
 <!-- Ao longo dessas atividades, os alunos são incentivados a interagir com applets para responder aos exercícios de fixação, promovendo uma abordagem prática e envolvente. -->
@@ -194,7 +194,7 @@
                     <div class="recurso-content">
 
                         <div class="recurso-box">
-                            <a href="https://www.geogebra.org/m/wj9n8x2f" target="_blank">
+                            <a href="https://www.geogebra.org/m/qhvmntq7" target="_blank">
                                 <img src="../assets/img/edo-livro-atv.jpg" alt="Livro de atividades de modelagem matemática usando equações diferenciais ordinárias">
                                 <img src="../assets/icons/geogebra-icon-peq.png" alt="icone geogebra" class="logo">
                             </a>
