linkagem correta dos recursos computacionais na index

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="pages/recursos.html#func-uma-var">
+                        <a href="pages/recursos.html#calc-func-uma-var">
                             <img
                                 src="assets/icons/icone-func.png"
                                 alt="Funções de Uma Variável"
@@ -324,7 +324,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="pages/recursos.html#func-uma-var">
+                        <a href="pages/recursos.html#calc-func-varias-var">
                             <img
                                 src="assets/icons/icone-func.png"
                                 alt="Funções de Uma Variável"
@@ -333,7 +333,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="pages/recursos.html#func-uma-var">
+                        <a href="pages/recursos.html#edo">
                             <img
                                 src="assets/icons/icone-func.png"
                                 alt="Funções de Uma Variável"
