remoção de bug na imagem sem link do recurso

--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -121,8 +121,10 @@
                         <div class="recurso-box">
 <!-- Lembrar de colocar um link -->
                             <!-- <a href="#" target="_blank"> -->
+                            <span>
                                 <img src="../assets/img/img-tvm.png" alt="Video do instagram">
                                 <img src="../assets/icons/instagram.png" alt="logo do insta" class="logo">
+                            </span>
                             <!-- </a> -->
                             <div class="recurso-descricao">
                                 <h5>Monitor: Gabriel Domingues</h5>
