remoção de tag revisar

--- a/pages/livros-eletronicos.html
+++ b/pages/livros-eletronicos.html
@@ -21,9 +21,9 @@
             <div class="fixar">
                 <h2>Livros Eletrônicos</h2>
                 <!-- Alterar este texto -->
-                <p class="revisar">Nessa seção você encontra os livros eletrônicos desenvolvidos</p>
+                <p>Nessa seção você encontra os livros eletrônicos desenvolvidos</p>
                 <span class="apenas-desktop">
-                    <p class="revisar">Os livros eletrônicos desempenham um papel crucial na era digital, oferecendo uma acessibilidade sem precedentes ao conhecimento e à literatura. Sua importância reside na capacidade de proporcionar fácil distribuição, armazenamento compacto e personalização da experiência de leitura. Além de reduzir o impacto ambiental associado à produção de papel, os e-books permitem que leitores acessem uma vasta biblioteca com apenas alguns cliques, promovendo a disseminação eficiente e econômica do saber em todo o mundo. Essa transformação digital não apenas amplia o acesso à informação, mas também impulsiona a inovação na forma como as histórias são contadas e o conhecimento é compartilhado.</p>
+                    <p>Os livros eletrônicos desempenham um papel crucial na era digital, oferecendo uma acessibilidade sem precedentes ao conhecimento e à literatura. Sua importância reside na capacidade de proporcionar fácil distribuição, armazenamento compacto e personalização da experiência de leitura. Além de reduzir o impacto ambiental associado à produção de papel, os e-books permitem que leitores acessem uma vasta biblioteca com apenas alguns cliques, promovendo a disseminação eficiente e econômica do saber em todo o mundo. Essa transformação digital não apenas amplia o acesso à informação, mas também impulsiona a inovação na forma como as histórias são contadas e o conhecimento é compartilhado.</p>
                 </span>
             </div>
             
