Adicionado livros digitais de 2021(FINALIZADO)

--- a/pages/livros-eletronicos.html
+++ b/pages/livros-eletronicos.html
@@ -34,6 +34,44 @@
 
 
             <!-- <hr> -->
+            <section id="geom-an-geogebra">
+                <div class="recurso-container">
+                    <div class="recurso-content">
+                        <h3>Apostila Cálculo Diferencial de Funções de Várias Variáveis</h3>
+                        <div class="recurso-box">
+                            <a href="https://redmatuff.github.io/calculovariasvariaveis/assets/pdf/apostila/apostila-completa.pdf">
+                               <img src="../assets/img/apostila-calc2B.png" alt="Apostila Calculo 2B">
+                            </a>
+                            <div class="recurso-descricao">
+                                <h5>Monitores: Ruan Soares Risso Possas, João Victor da Silvares, Gabriel Felice de Freitas Santos, Raphael Odalvo, João Pedro Teixeira, Maria Luiza Américo, Alan da Silva Gomes </h5>
+                                <h5>Orientadores: Begoña Alarcón, Jones Colombo, Leandro Merlo, Leonardo Silvares e Pablo Barrientos.</h5>
+                                <h6>Ano: 2021</h6>
+                                <p>Os monitores REDMat contribuiram ativamente na criação e digitalização das figuras para compor a construção da apostila de calculo de diferencial de funções de várias variáveis </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <hr>
+            <section id="geom-an-geogebra">
+                <div class="recurso-container">
+                    <div class="recurso-content">
+                        <h3>Geometria Analítica com Geogebra</h3>
+                        <div class="recurso-box">
+                            <a href="https://www.geogebra.org/m/wtmkn9nv">
+                               <img src="../assets/img/ga-cv.png" alt="Geometria Analítica com Geogebra">
+                            </a>
+                            <div class="recurso-descricao">
+                                <h5>Monitores: Ruan Soares Risso Possas, João Victor da Silvares, Gabriel Felice de Freitas Santos, Raphael Odalvo, João Pedro Teixeira, Maria Luiza Américo, Alan da Silva Gomes </h5>
+                                <h5>Orientadores: Begoña Alarcón, Jones Colombo, Leandro Merlo, Leonardo Silvares e Pablo Barrientos.</h5>
+                                <h6>Ano: 2021</h6>
+                                <p>O livro tem o  intuito de ser um primeiro contato com o conteúdo básico Geometria Analítica de forma objetiva e dinâmica. Por este motivo, o conteúdo aqui abordado deve ser complementado  com o estudo do material indicado pelo professor.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <hr>
 
             <section id="calc-geogebra-v1">
                 <div class="recurso-container">
@@ -75,26 +113,7 @@
             </section>
             <hr>
 
-            <section id="geom-an-geogebra">
-                <div class="recurso-container">
-                    <div class="recurso-content">
-                        <h3>Geometria Analítica com Geogebra</h3>
-                        <div class="recurso-box">
-                            <a href="https://www.geogebra.org/m/wtmkn9nv">
-                               <img src="../assets/img/ga-cv.png" alt="Geometria Analítica com Geogebra">
-                            </a>
-                            <div class="recurso-descricao">
-                                <h5>Monitores: Ruan Soares Risso Possas, João Victor da Silvares, Gabriel Felice de Freitas Santos, Raphael Odalvo, João Pedro Teixeira, Maria Luiza Américo, Alan da Silva Gomes </h5>
-                                <h5>Orientadores: Begoña Alarcón, Jones Colombo, Leandro Merlo, Leonardo Silvares e Pablo Barrientos.</h5>
-                                <h6>Ano: 2021</h6>
-                                <p>O livro tem o  intuito de ser um primeiro contato com o conteúdo básico Geometria Analítica de forma objetiva e dinâmica. Por este motivo, o conteúdo aqui abordado deve ser complementado  com o estudo do material indicado pelo professor.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <hr>
-
+            
             <section id="ap-calc-varias-var">
                 <div class="recurso-container">
                     <div class="recurso-content">
