--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -130,13 +130,57 @@
                                 <h5>Monitor: Gabriel Domingues</h5>
                                 <h5> Orientador: Begoña Alarcón</h5>
                                 <h6>Ano: 2023</h6>
-                                <p>Conteúdo para o Instagram sobre Teorema de Rolle e Teorema do Valor Médio</p>
+                                <p>Conteúdo criado para o Instagram utilizando Python sobre Teorema de Rolle e Teorema do Valor Médio</p>
                             </div>
                         </div>
 
                     </div>
                 </article>
-               
+
+                <article class="recurso-container">
+                    <h3 >Teorema do Valor Médio</h3>
+                    <div class="recurso-content">
+
+                        <div class="recurso-box">
+
+                            <a href="#" target="_blank">
+                            <span>
+                                <img src="../assets/img/tvm-geogebra.png" alt="Video do instagram">
+                                <img src="../assets/icons/site-icone.png" alt="logo do site" class="logo">
+                            </span>
+                            </a>
+                            <div class="recurso-descricao">
+                                <h5>Monitores: Barbara Emily Rodrigues de Morais, Joao Lucas Ferraro Gonçalves, Lacerda de Abreu Soares, Maria Luiza Américo </h5>
+                                <h5> Orientadores: Begoña Alarcón, Leonardo Silvares, Pablo Barrientos e Maria João</h5>
+                                <h6>Ano: 2022</h6>
+                                <p>Applet criado no Geogebra para os alunos interagirem com o teorema do valor médio</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </article>
+                <article class="recurso-container">
+                    <h3 >Função Composta</h3>
+                    <div class="recurso-content">
+
+                        <div class="recurso-box">
+
+                            <a href="#" target="_blank">
+                            <span>
+                                <img src="../assets/img/tvm-geogebra.png" alt="Video do instagram">
+                                <img src="../assets/icons/site-icone.png" alt="logo do site" class="logo">
+                            </span>
+                            </a>
+                            <div class="recurso-descricao">
+                                <h5>Monitores: Barbara Emily Rodrigues de Morais, Joao Lucas Ferraro Gonçalves, Lacerda de Abreu Soares, Maria Luiza Américo </h5>
+                                <h5> Orientadores: Begoña Alarcón, Leonardo Silvares, Pablo Barrientos e Maria João</h5>
+                                <h6>Ano: 2022</h6>
+                                <p>Applet criado no Geogebra para os alunos interagirem com o teorema do valor médio</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </article>
             </section>
             <!-- <hr style="height: 0.5rem; margin-bottom: 10rem ; background-image: linear-gradient(to right, transparent, #999, transparent);"> -->
             <hr class="linha-grossa">
@@ -169,6 +213,32 @@
                                 <h6>Ano: 2023</h6>
                                 <p >
                                     O livro de atividades apresenta abordagem visual com gráficos 3D de conceitos do vetor gradiente e algumas relações com a correspondente curva de nível.
+                                </p>
+<!-- <p class="comentario">O texto abaixo fica na descrição do livro dentro do site geogebra. Fazer um resumo para substituí-lo</p><br> -->
+<!-- Ao longo dessas atividades, os alunos são incentivados a interagir com applets para responder aos exercícios de fixação, promovendo uma abordagem prática e envolvente. -->
+<!-- <p class="revisar"> -->
+<!-- A análise visual de curvas de nível e do vetor gradiente em gráficos tridimensionais é essencial no processo de aprendizado do cálculo de várias variáveis, proporcionando uma compreensão mais aprofundada e intuitiva desses conceitos. A integração da tecnologia, por meio de gráficos interativos acessíveis diretamente por meio de um navegador, intensifica ainda mais essa experiência educacional. Essas representações tridimensionais capacitam os estudantes a explorar de maneira dinâmica e interativa as relações complexas presentes em funções multivariáveis. -->
+<!-- </p> -->
+                            </div>
+                        </div>
+                        
+                    </div>
+                </article>
+                <article class="recurso-container">
+                    <h3>Mapa de Contorno</h3>
+                    <div class="recurso-content">
+
+                        <div class="recurso-box">
+                            <a href="https://redmatuff.github.io/calculovariasvariaveis/web-pages/funcoes-varias-variaveis/mapa-de-contorno-atividade.html" target="_blank">
+                                <img src="../assets/img/mapa-de-contorno.png" alt="Mapa de Contorno">
+                                <img src="../assets/icons/site-icone.png" alt="logo de site" class="logo">
+                            </a>
+                            <div class="recurso-descricao">
+                                <h5>Monitores: Ruan Soares Risso Possas, João Victor da Silvares, Gabriel Felice de Freitas Santos, Raphael Odalvo, João Pedro Teixeira, Maria Luiza Américo, Alan da Silva Gomes</h5>
+                                <h5>Orientadores: Begoña Alarcón, Jones Colombo, Leandro Merlo, Leonardo Silvares e Pablo Barrientos.</h5>
+                                <h6>Ano: 2021</h6>
+                                <p >
+                                    Foi desenvolvido um site interativo, apresentando dois jogos  destinado a auxiliar os alunos na conexão de conceitos relacionados a curvas de nível. Além disso, o site conta com diversas questões para os alunos praticarem
                                 </p>
 <!-- <p class="comentario">O texto abaixo fica na descrição do livro dentro do site geogebra. Fazer um resumo para substituí-lo</p><br> -->
 <!-- Ao longo dessas atividades, os alunos são incentivados a interagir com applets para responder aos exercícios de fixação, promovendo uma abordagem prática e envolvente. -->
