adicionado conteudos de 2022 na pagina Recursos

--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -92,6 +92,95 @@
                         
                     </div>
                 </article>
+                <article class="recurso-container">
+                    <h3 >Função Composta</h3>
+                    <div class="recurso-content">
+
+                        <div class="recurso-box">
+
+                            <a href="https://www.geogebra.org/m/dupf8b3h" target="_blank">
+                            <span>
+                                <img src="../assets/img/func-composta.png" alt="Video do instagram">
+                                <img src="../assets/icons/geogebra-icon-peq.png" alt="logo do geogebra" class="logo">
+                            </span>
+                            </a>
+                            <div class="recurso-descricao">
+                                <h5>Monitores: Barbara Emily Rodrigues de Morais, Joao Lucas Ferraro Gonçalves, Lacerda de Abreu Soares, Maria Luiza Américo </h5>
+                                <h5> Orientadores: Begoña Alarcón, Leonardo Silvares, Pablo Barrientos e Maria João</h5>
+                                <h6>Ano: 2022</h6>
+                                <p>Um applet interativo projetado para facilitar o aprendizado de funções compostas, permitindo que os alunos visualizem e manipulem graficamente a composição de funções de forma intuitiva.</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </article>
+                <article class="recurso-container">
+                    <h3 >Resolução de Exercício: Retas</h3>
+                    <div class="recurso-content">
+
+                        <div class="recurso-box">
+
+                            <a href="https://www.youtube.com/watch?v=2UrsOMlpxw0" target="_blank">
+                            <span>
+                                <img src="../assets/img/exemplo-de-reta.png" alt="Video do youtube">
+                                <img src="../assets/icons/youtube.png" alt="logo do youtube" class="logo">
+                            </span>
+                            </a>
+                            <div class="recurso-descricao">
+                                <h5>Monitora: Bárbara Moraes </h5>
+                                <h5> Orientadores: Begoña Alarcón</h5>
+                                <h6>Ano: 2022</h6>
+                                <p>(adicionar descrição)</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </article>
+                <article class="recurso-container">
+                    <h3 >Ilustração gráfica de composição de funções.</h3>
+                    <div class="recurso-content">
+
+                        <div class="recurso-box">
+
+                            <a href="https://www.youtube.com/watch?v=FPcuhMy7rN8" target="_blank">
+                            <span>
+                                <img src="../assets/img/composicao-de-funcoes.png" alt="Video do youtube">
+                                <img src="../assets/icons/youtube.png" alt="logo do youtube" class="logo">
+                            </span>
+                            </a>
+                            <div class="recurso-descricao">
+                                <h5>Monitora: Celine Abreu </h5>
+                                <h5> Orientadora: Maria João Resende </h5>
+                                <h6>Ano: 2022</h6>
+                                <p>(adicionar descrição)</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </article>
+                <article class="recurso-container">
+                    <h3 >Resolução de Exercícios.</h3>
+                    <div class="recurso-content">
+
+                        <div class="recurso-box">
+
+                            <a href="https://youtu.be/Jq8XLd-6ywE" target="_blank">
+                            <span>
+                                <img src="../assets/img/resolucao-exercicio.png" alt="Video do youtube">
+                                <img src="../assets/icons/youtube.png" alt="logo do youtube" class="logo">
+                            </span>
+                            </a>
+                            <div class="recurso-descricao">
+                                <h5>Monitora: Bárbara Moraes  </h5>
+                                <h5> Orientadora: Begoña Alarcón </h5>
+                                <h6>Ano: 2022</h6>
+                                <p>(adicionar descrição)</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </article>
+
 <!-- Fim > Seção 1 > Container 1 -->
 
             </section>
@@ -159,28 +248,7 @@
 
                     </div>
                 </article>
-                <article class="recurso-container">
-                    <h3 >Função Composta</h3>
-                    <div class="recurso-content">
-
-                        <div class="recurso-box">
-
-                            <a href="#" target="_blank">
-                            <span>
-                                <img src="../assets/img/tvm-geogebra.png" alt="Video do instagram">
-                                <img src="../assets/icons/site-icone.png" alt="logo do site" class="logo">
-                            </span>
-                            </a>
-                            <div class="recurso-descricao">
-                                <h5>Monitores: Barbara Emily Rodrigues de Morais, Joao Lucas Ferraro Gonçalves, Lacerda de Abreu Soares, Maria Luiza Américo </h5>
-                                <h5> Orientadores: Begoña Alarcón, Leonardo Silvares, Pablo Barrientos e Maria João</h5>
-                                <h6>Ano: 2022</h6>
-                                <p>Applet criado no Geogebra para os alunos interagirem com o teorema do valor médio</p>
-                            </div>
-                        </div>
-
-                    </div>
-                </article>
+                
             </section>
             <!-- <hr style="height: 0.5rem; margin-bottom: 10rem ; background-image: linear-gradient(to right, transparent, #999, transparent);"> -->
             <hr class="linha-grossa">
