--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -232,7 +232,7 @@
 
                         <div class="recurso-box">
 
-                            <a href="#" target="_blank">
+                            <a href="https://www.geogebra.org/m/defpwgtj" target="_blank">
                             <span>
                                 <img src="../assets/img/tvm-geogebra.png" alt="Video do instagram">
                                 <img src="../assets/icons/site-icone.png" alt="logo do site" class="logo">
@@ -241,6 +241,7 @@
                             <div class="recurso-descricao">
                                 <h5>Monitores: Barbara Emily Rodrigues de Morais, Joao Lucas Ferraro Gonçalves, Lacerda de Abreu Soares, Maria Luiza Américo </h5>
                                 <h5> Orientadores: Begoña Alarcón, Leonardo Silvares, Pablo Barrientos e Maria João</h5>
+                                
                                 <h6>Ano: 2022</h6>
                                 <p>Applet criado no Geogebra para os alunos interagirem com o teorema do valor médio</p>
                             </div>
